[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jaxqualin_mhycheung"
version = "0.0.0"
authors = [
  { name="Mark Ho-Yeuk Cheung", email="hcheung5@jhu.edu" },
]
description = "A package for extracting quasinormal modes from time domain data"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/mhycheung/Jaxqualin"
"Bug Tracker" = "https://github.com/mhycheung/Jaxqualin/issues"