[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
version = "0.0.1"
name = "jaxqualin"
authors = [
  { name="Mark Ho-Yeuk Cheung", email="hcheung5@jhu.edu" },
]
description = "A package for extracting quasinormal modes from time domain data"
readme = "README.md"
requires-python = ">=3.8,<3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "adjustText==0.8",
  "jax>0.3.23",
  "jaxlib>0.3.23",
  "jaxfit==0.0.3",
  "matplotlib>3.6.1",
  "numpy>1.23",
  "pandas>1.5.1",
  "pykerr==0.1.0",
  "qnm==0.4.3",
  "scipy>1.9.3",
  "sxs>2022.4.5",
  "tqdm>4.61.1",
]

[project.optional-dependencies]
pycbc = ["PyCBC>2.0.6"]

[project.urls]
"Homepage" = "https://github.com/mhycheung/Jaxqualin"
"Bug Tracker" = "https://github.com/mhycheung/Jaxqualin/issues"